change stackednamespace to linkedlist